--- a/frontend/src/assets/scss/components/_messageList.scss
+++ b/frontend/src/assets/scss/components/_messageList.scss
@@ -1,7 +1,7 @@
 .messageList {
   width: 100%;
   // height: 90%;
-  max-height: calc(var(--app-height) - 120px);
+  // max-height: calc(var(--app-height) - 120px);
   overscroll-behavior: contain;
   flex: 1;
   padding: 10px 40px;
