comment out overscroll-behavior in body styles

--- a/frontend/src/assets/scss/_base.scss
+++ b/frontend/src/assets/scss/_base.scss
@@ -14,7 +14,7 @@ body {
 
   // overscroll-behavior-y: none;
   // touch-action: manipulation;
-  overscroll-behavior: none;
+  // overscroll-behavior: none;
 }
 
 .container {
