--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -45,6 +45,7 @@
   --drawer-box-shadow: 0px 7px 8px rgb(177 177 177 / 7%);
   --dropdown-bg: #fff;
   --dropdown-hover-bg: #f5f6f6;
+  --active-bg-color: #f0f2f5;
 }
 
 // Dark Mode Colors
@@ -78,4 +79,5 @@
   --drawer-box-shadow: 0 2px 4px rgba(11, 20, 26, 0.16);
   --dropdown-bg: #233138;
   --dropdown-hover-bg: #182229;
+  --active-bg-color: #2a3942;
 }
