--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -2,7 +2,7 @@
   width: 100%;
   margin: 0 auto;
   background: var(--bg-color);
-  padding: 20px 0 25px 15px;
+  padding: 20px 0 25px 0;
   height: 100%;
 
   .row {
@@ -12,6 +12,7 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
+      padding-left: 15px;
       .moreIcons {
         display: flex;
         gap: 25px;
@@ -23,8 +24,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding-left: 13px;
       input {
         background: var(--sidebar-bg);
+        color: var(--text-color);
         width: 100%;
         outline: none;
         border: none;
@@ -54,11 +57,8 @@
     }
     .conversationList {
       height: 100%;
-      padding: 0 5px;
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      padding-right: 15px;
       overflow-y: auto;
       scrollbar-width: thin;
       scrollbar-color: var(--scrollbar-color) transparent;
@@ -67,7 +67,9 @@
         align-items: center;
         width: 100%;
         gap: 10px;
+        padding: 0 12px 0 16px;
         cursor: pointer;
+        transition: all 0.3s ease-in-out;
         .profileImgContainer {
           .profileImg {
             width: 55px;
@@ -116,6 +118,13 @@
             }
           }
         }
+        &:hover {
+          background: var(--sidebar-hover);
+        }
+      }
+
+      .activeChat {
+        background: var(--active-bg-color);
       }
 
       .noResult {
@@ -135,10 +144,10 @@
 
 @media (max-width: 768px) {
   .chatList {
-    padding: 20px 15px 25px 15px;
     .row {
       gap: 16px;
       .heading {
+        padding-right: 10px;
         .moreIcons {
           gap: 16px;
           padding: 0;
@@ -146,6 +155,7 @@
       }
       .searchBar {
         width: 100%;
+        padding-right: 13px;
         input {
           padding: 0 18px;
           &::placeholder {
@@ -155,10 +165,10 @@
       }
 
       .conversationList {
-        padding: 0 10px;
         gap: 0;
         .chatItem {
           gap: 12px;
+          padding: 0 19px 0 18px;
           .profileImgContainer {
             .profileImg {
               width: 50px;
@@ -180,7 +190,6 @@
 
 @media (max-width: 425px) {
   .chatList {
-    padding: 10px 10px 15px 10px;
     .row {
       gap: 12px;
       .heading {
@@ -195,6 +204,62 @@
           &::placeholder {
             font-size: 14px;
           }
+        }
+      }
+      .conversationList {
+        .chatItem {
+          padding: 0 12px 0 15px;
+          .profileImgContainer {
+            .profileImg {
+              width: 45px;
+              height: 45px;
+              .defaultImg {
+                width: 45px;
+                height: 45px;
+              }
+            }
+          }
+          .content {
+            padding: 12px 0;
+            .info {
+              h3 {
+                font-size: 16px;
+              }
+              p {
+                font-size: 14px;
+              }
+            }
+            .details {
+              .date {
+                font-size: 10px;
+              }
+              .unread {
+                width: 18px;
+                height: 18px;
+                padding-bottom: 1px;
+                padding-right: 1px;
+                font-size: 10px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .chatList {
+    .row {
+      .heading {
+        padding-right: 8px;
+      }
+      .searchBar {
+        padding-right: 10px;
+      }
+      .conversationList {
+        .chatItem {
+          padding: 0 10px 0 12px;
         }
       }
     }
