bg to active tab

--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -46,6 +46,7 @@
   --dropdown-bg: #fff;
   --dropdown-hover-bg: #f5f6f6;
   --active-bg-color: #f0f2f5;
+  --active-tab-bg: #d9dbdf;
 }
 
 // Dark Mode Colors
@@ -80,4 +81,5 @@
   --dropdown-bg: #233138;
   --dropdown-hover-bg: #182229;
   --active-bg-color: #2a3942;
+  --active-tab-bg: #374248;
 }
