--- a/frontend/src/assets/scss/components/_chatList.scss
+++ b/frontend/src/assets/scss/components/_chatList.scss
@@ -4,7 +4,7 @@
   background: var(--bg-color);
   padding: 20px 0 25px 0;
   height: 100%;
-
+  border: 1px solid var(--scrollbar-color);
   .row {
     flex-direction: column;
     gap: 20px;
