user set profile pic in left bar

--- a/frontend/src/assets/scss/components/_leftPanel.scss
+++ b/frontend/src/assets/scss/components/_leftPanel.scss
@@ -47,6 +47,10 @@
           height: 30px;
           border-radius: 50%;
           border: 1px solid #c9c6c6f0;
+          .defaultImg {
+            width: 30px;
+            height: 30px;
+          }
         }
       }
     }
