--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -11,10 +11,10 @@
   --msg-status-color: #667181;
   --accent: #25d366;
   --link: #0078f4;
-  --icon: #54656f; // #54656F #3B4A54
+  --icon: #54656f;
   --highlighted-bg: #f0f2f5;
   --sidebar-bg: #f0f2f5;
-  --sidebar-hover: #f0f2f5; // #d9dbdf;
+  --sidebar-hover: #f0f2f5;
   --active-tab-bg: #e7fce3;
   --blue-light: #009de2;
   --chat-scroll-color: rgba(11, 20, 26, 0.2);
@@ -62,8 +62,8 @@
   --link: #0078f4;
   --icon: #aebac1;
   --highlighted-bg: #111b21;
-  --sidebar-bg: #202c33; //#8696A0
-  --sidebar-hover: #202c33; // #2a3942
+  --sidebar-bg: #202c33;
+  --sidebar-hover: #202c33;
   --active-tab-bg: #0a332c;
   --scrollbar-color: #323a3f90;
   --secondary-light: #54656f;
