update default messages and images to reflect branding change from WhatsApp to Bubble; adjust styles and remove unused elements

--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -47,6 +47,7 @@
   --dropdown-hover-bg: #f5f6f6;
   --active-bg-color: #f0f2f5;
   --active-tab-bg: #d9dbdf;
+  --btn-box-shadow: rgb(255, 255, 255);
 }
 
 // Dark Mode Colors
@@ -82,4 +83,5 @@
   --dropdown-hover-bg: #182229;
   --active-bg-color: #2a3942;
   --active-tab-bg: #374248;
+  --btn-box-shadow: #111B21;
 }
