--- a/frontend/src/assets/scss/components/_chatWindow.scss
+++ b/frontend/src/assets/scss/components/_chatWindow.scss
@@ -1,6 +1,7 @@
 .chatWindow {
   display: flex;
   height: var(--app-height);
+  height: 100%;
   width: 65%;
   overflow: hidden;
   background-repeat: no-repeat;
