--- a/frontend/src/assets/scss/components/_statusList.scss
+++ b/frontend/src/assets/scss/components/_statusList.scss
@@ -61,7 +61,7 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            box-shadow: 0px 0px 0px 2px rgb(255, 255, 255);
+            box-shadow: 0px 0px 0px 2px var(--btn-box-shadow);
             svg {
               color: #fff;
             }
